# chatbot

./: .env.example  .gitignore  RAG.ipynb  RAG_ReACT.ipynb  RAG_local_LLM.ipynb  RAG_memory.ipynb  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  rag_pipeline.py  rasa_inference.py
data/: HanoiFC_Cau_Thu_2025_26.xlsx  Nguyễn Công Phượng.docx  __init__.py  build_db.py  download.py
demo/: app.py
evaluation/: __init__.py  evaluate.py  metrics.py  test_cases.py
rasa/: README.md  config.yml  credentials.yml  domain.yml  endpoints.yml  fake_rag_api.py  requirements.txt
rasa/.rasa/cache/: cache.db
rasa/.rasa/cache/tmp1_ia51uz/: vocabularies.json
rasa/.rasa/cache/tmp6upthipi/: vocabularies.json
rasa/.rasa/cache/tmp7x5l81qa/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
rasa/actions/: actions.py
rasa/data/: nlu.yml  rules.yml  stories.yml
rasa_app/: Dockerfile  config.yml  endpoints.yml  start-rasa.sh
rasa_app/.rasa/cache/: cache.db
rasa_app/data/: nlu.yml  stories.yml
rasa_app/data/flows/: general_conversation.yml  pattern_chitchat.yml  pattern_search.yml
rasa_app/data/rules/: general.yml
rasa_app/domain/: shared.yml
rasa_app/e2e_tests/happy_paths/: user_asks_about_corpus_knowledge.yml  user_chitchats.yml  user_uses_multiturn_context.yml
rasa_app/prompts/: command_generator_prompt.jinja2  enterprise_search_policy_prompt.jinja2
rasa_app/scripts/: build_knowledge_docs.py  patch_model_flow_retrieval_index.py
ui/: Dockerfile  README.md  app.py  requirements.txt
(+23 files in other folders)
